Aplicações Externas com o programa R
Aplicações Externas já com o programa R bem implementado a gerar
graficos corretamente